# swing-bot

./: .env.template  README.md
backend/: makefile  pyproject.toml
backend/app/: main.py  test_pipeline.py
backend/app/api/: __init__.py  routes.py
backend/app/data/: __init__.py  sp500.py
backend/app/services/: __init__.py
backend/app/services/cache/: __init__.py  redis_client.py
backend/app/services/database/: __init__.py  postgres_client.py
backend/app/services/perplexity/: __init__.py  client.py  models.py  prompts.py
backend/app/services/polygon/: __init__.py  client.py  indicators.py  screening.py
backend/app/services/research/: __init__.py  gates.py  pipeline.py
database/migrations/: V001__create_analysis_tables.sql
